--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/SumnerFrank/team-profile-generator#readme",
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha1",
     "inquirer": "^8.2.0",
     "jest": "^29.3.1"
   }
